# auth-flow

./: .env.example  .gitignore  Dockerfile  README.md  compliance_helpdesk.docx  compliance_helpdesk.md  docker-compose.yml  documents_api.docx  documents_api.md  events_api.md  events_service_tdd_doc.docx  pyproject.toml
api/: config.py  main.py
api/dependencies/: auth.py
api/model/: user.py
api/routes/: auth.py  health.py
api/services/: auth_service.py
api/utils/: auth.py  db.py  logger.py
backend/: DATABASE_SETUP.md  SQLITE_AND_SWITCHBACK.md  cache.py  config.py  constants.py  database.py  main.py  requirements.txt  seed.py
backend/alembic/: bd7eb4031d0b_initial.py  env.py
backend/alembic/versions/: 0001_combined_init_events_documents.py  0001_sqlite_init.py  0002_add_updated_by_to_events_documents.py  0002_rename_draft_parent_id_to_replaces_document_id.py  0003_add_bulk_applicability_requests.py  0003_event_likes_and_like_count.py  0003_remove_published_use_active.py  (+11 more)
backend/app/: cache.py  config.py  constants.py  database.py  db_utils.py  main.py  seed.py
backend/routers/: home.py
backend/services/: items_service.py
backend/storage/: __init__.py  azure.py  base.py
backend/tests/: __init__.py  conftest.py  test_combined.py  test_documents.py  test_events.py  test_home.py
backend/utils/: applicability.py  cache_keys.py  dates.py  deps.py  magic_bytes.py  security.py
client/: package-lock.json  package.json
client/src/: App.tsx
docs/: FE_API_ITEMS_AND_DOCUMENTS.md  bulk_applicability_tdd.md
frontend/src/: App.tsx  index.css
(+118 files in other folders)
